--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
+    <script src="config.js"></script>
     <script src="assets/javascript/app.js"></script>
 </body>
 
