--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div></div>
         </div>
         <div class="row">
-            <p class="col-4" id="name"></p>
+            <p class="col-4" id="result"></p>
             <p class="col-4" id="opponent"></p>
             <p class="col-4" id="wait-text"></p>
         </div>
